<resources>
    <string name="app_name">Weather Forecast</string>
    <string name="temp_placeholder" translatable="false">0℃</string>
    <string name="empty_string" translatable="false"> </string>
    <string name="img_condition_desc" translatable="false">img_condition</string>
    <string name="based_on_openweathermap_weather_forecast">Based on OpenWeatherMap weather forecast</string>
    <string name="welcome_text">Welcome!</string>
    <string name="api_key_textfield_hint">API Key</string>
    <string name="btn_finish_text">Finish</string>
    <string name="empty_api_key_error_text">API Key value can\'t be empty</string>
    <string name="welcome_text_step_one">First, write your OpenWeatherMap API Key into the text field below</string>
    <string name="lang">en</string>
    <string name="temp" translatable="false">%1$s°%2$s</string>
    <string name="volley_error">Volley error: %1$s</string>
    <string name="location_null_error">Can\'t get current location. Please enable location service and restart the app</string>
    <string name="unknown">unknown</string>
    <string name="tv_country_text" translatable="false">%1$s, %2$s</string>
    <string name="tv_desc_text" translatable="false">%1$s</string>
    <string name="feels_like_placeholder">Feels like: 0℃</string>
    <string name="feels_like_text">Feels like: %1$s°%2$s</string>
    <string name="__weather_icon_template" translatable="false">_%1$s</string>
    <string name="__res_type" translatable="false">drawable</string>
    <string name="img_temp_min_desc" translatable="false">img_temp_min</string>
    <string name="img_temp_max_desc" translatable="false">img_temp_max</string>
    <string name="__api_url" translatable="false"><![CDATA[https://api.openweathermap.org/data/2.5/weather?lat=%1$s&lon=%2$s&APPID=%3$s&units=%5$s&lang=%4$s]]></string>
    <string name="tv_update_status_loading_status">Loading weather&#8230;</string>
    <string name="tv_update_status_updated_for_current_location_status">Updated weather for current location</string>
    <string name="tv_update_status_updated_for_saved_location_status">Updated weather for last saved location</string>
    <string name="barometer_color_3" translatable="false">#ff88ff99</string>
    <string name="img_humid_desc" translatable="false">img_humid</string>
    <string name="humidity_placeholder" translatable="false">0%</string>
    <string name="humidity_text" translatable="false">%1$s%%</string>
    <string name="refresh_btn_title">Refresh</string>
    <string name="settings_btn_title">Settings</string>
    <string name="weather_upd_mode_chooser_label">Choose weather update mode:</string>
    <string name="weather_upd_mode_chooser_hint">Choose mode</string>
    <string name="temp_card_title">Temperature ranges</string>
    <string name="humidity_card_title">Humidity</string>
    <string name="pressure_card_title">Pressure</string>
    <string name="barometer_placeholder_no_data">No data</string>
    <string name="back_btn_nav_content_desc">Back</string>
    <string name="settings_section_updates">Updates</string>
    <string name="settings_activity_title">Settings</string>
    <string name="ic_check_updates_content_desc">Check for updates</string>
    <string name="tv_current_version_placeholder">Current version: unknown</string>
    <string name="tv_check_for_updates_label">Check for updates</string>
    <string name="settings_section_general">General</string>
    <string name="settings_temp_unit_title">Temperature unit</string>
    <string name="settings_temp_unit_sub_celsius">Use Fahrenheit (°F) instead of Celsius (°C)</string>
    <string name="settings_temp_unit_desc">Temperature Units</string>
    <string name="settings_api_key_desc">Settings API Key</string>
    <string name="settings_api_key_title">OpenWeatherMap API Key</string>
    <string name="settings_api_key_sub">Change current key for requests</string>
    <string name="tv_current_version_format">Current version: %1$s</string>
    <string name="update_dialog_title">Check for Updates</string>
    <string name="update_latest">You already have the latest version installed!</string>
    <string name="update_available">New version available: %1$s. Would you like to update?</string>
    <string name="update_btn_download">Download</string>
    <string name="update_btn_cancel">Cancel</string>
    <string name="update_error">Failed to check for updates. Network error.</string>
    <string name="dlmgr_upd_title">Weather Forecast Update</string>
    <string name="dlmgr_upd_desc">Downloading version %1$s</string>
    <string name="pkgmgr_init_error">Error starting installer</string>
    <string name="pkgmgr_enoent">Update file not found</string>
    <string name="weather_update_failed">Failed to update weather. Check internet connection</string>
    <string name="weather_update_retry_action">Retry</string>
    <string name="update_install_request_permission">Please allow installation from unknown sources</string>
    <string name="update_indicator_downloading">Downloading update...</string>
    <string name="update_download_failed">Failed to download an update file</string>
    <string name="dialog_edit_api_key_title">Edit API Key</string>
    <string name="barometer_label">%1$d hPa</string>
    <string name="tv_total_pressure_label">Total pressure</string>
    <string name="tv_on_the_sea_level_label">On the sea level</string>
    <string name="tv_on_the_ground_level_label">On the ground level</string>
    <string name="dialog_api_key_cancel_btn">Cancel</string>
    <string name="dialog_api_key_save_btn">Save</string>
    <string name="wind_card_title">Wind</string>
    <string name="wind_card_wind_speed_placeholder">0 m/s</string>
    <string name="wind_card_wind_gust_placeholder">0 m/s</string>
    <string name="wind_card_wind_speed_format">%1$s %2$s</string>
    <string name="wind_card_wind_gust_format">%1$s %2$s</string>
    <string name="wind_name_n">North</string>
    <string name="wind_name_ne">Northeast</string>
    <string name="wind_name_e">East</string>
    <string name="wind_name_se">Southeast</string>
    <string name="wind_name_s">South</string>
    <string name="wind_name_sw">Southwest</string>
    <string name="wind_name_w">West</string>
    <string name="wind_name_nw">Northwest</string>
    <string name="upd_mode_only_gps">GPS only</string>
    <string name="upd_mode_only_city">Defined city only</string>
    <string name="weather_city_name_textfield_label">Choose your city:</string>
    <string name="tv_update_status_updated_for_selected_city_status">Updated weather for selected city</string>
    <string name="settings_upd_mode_desc">Use GPS or not setting</string>
    <string name="settings_upd_mode_title">Use GPS</string>
    <string name="settings_upd_mode_sub">Use GPS data or selected city</string>
    <string name="city_name_textfield_hint">City name</string>
    <string name="city_search_autocomplete_tv_hint">City name</string>
    <string name="sun_info_card_title">Sun day</string>
    <string name="aqi_card_title">Air quality index</string>
    <string name="uvi_card_title">UV index</string>
    <string name="sun_chart_sunrise">Sunrise: %1$s</string>
    <string name="sun_chart_sunset">Sunset: %1$s</string>
    <string name="wind_speed_units_meters_sec">m/s</string>
    <string name="wind_speed_units_miles_h">mph</string>
    <string name="dew_point_placeholder">Dew point: --°C</string>
    <string name="dew_point_format">Dew point: %1$s°%2$s</string>
    <string name="file_size_format">%.2f MB</string>
    <string name="update_available_notify_title">Update available: %1$s</string>
    <string name="update_available_notify_text">Size: %1$s. Update?</string>
    <string name="update_available_notify_action_update">Update</string>
    <string name="update_downloading_notify_title">Downloading update...</string>
    <string name="update_downloading_notify_text">Downloaded %1$d%%</string>
    <string name="update_ready_notify_title">Update is ready to install</string>
    <string name="update_ready_notify_text">Click to install</string>
    <string name="update_indicator_checking">Checking for updates...</string>
    <string name="updates_notify_channel_title">Updates</string>
    <string name="updates_notify_channel_desc">Notifications about new versions and downloads of app updates</string>
    <string name="update_activity_toolbar_title">App update</string>
    <string name="card_versions_compare_installed_label">Installed</string>
    <string name="card_versions_compare_available_label">Available</string>
    <string name="whats_new_block_title">What\'s new</string>
    <string name="download_progress_placeholder">%1$d%% • %2$.1f MB / %3$.1f MB</string>
    <string name="update_downloading_progress_notify_text">%1$s MB / %2$s MB</string>
    <string name="update_activity_btn_action_download_an_update">Download update</string>
    <string name="update_activity_btn_action_up_to_date">The latest version is installed</string>
    <string name="update_activity_btn_action_cancel_download">Cancel</string>
    <string name="update_activity_btn_action_install_an_update">Install update</string>
    <string name="update_file_not_found_error">Update file not found, please download again</string>
    <string name="update_cancelled_info">Download cancelled</string>
    <string name="outdoor_indexes_placeholder" translatable="false">0</string>
    <string name="__uvi_api_url" translatable="false"><![CDATA[https://api.openweathermap.org/data/2.5/uvi?lat=%1$s&lon=%2$s&APPID=%3$s&units=%4$s&lang=%5$s]]></string>
    <string name="__aqi_api_url" translatable="false"><![CDATA[https://api.openweathermap.org/data/2.5/air_pollution?lat=%1$s&lon=%2$s&APPID=%3$s&units=%4$s&lang=%5$s]]></string>
    <string name="air_details_card_title">Aiq quality details</string>
    <string name="air_gas_placeholder">unknown: 0 µg/m³</string>
    <string name="aqi_val_good">Good</string>
    <string name="aqi_val_moderate">Moderate</string>
    <string name="aqi_val_unhealthy_for_sensitive_groups">Unhealthy for sensitive</string>
    <string name="aqi_val_unhealthy">Unhealthy</string>
    <string name="aqi_val_very_unhealthy">Very Unhealthy</string>
    <string name="aqi_val_hazardous">Hazardous</string>
    <string name="aqi_val_format">%1$s: %2$s µg/m³</string>
    <string name="co_gas" translatable="false">CO</string>
    <string name="no_gas" translatable="false">NO</string>
    <string name="no2_gas" translatable="false">NO₂</string>
    <string name="o3_gas" translatable="false">O₃</string>
    <string name="so2_gas" translatable="false">SO₂</string>
    <string name="pm25_gas" translatable="false">PM₂.₅</string>
    <string name="pm10_gas" translatable="false">PM₁₀</string>
    <string name="nh3_gas" translatable="false">NH₃</string>
    <string name="uvi_val_low">Low</string>
    <string name="uvi_val_moderate">Moderate</string>
    <string name="uvi_val_high">High</string>
    <string name="uvi_val_dangerous">Dangerous</string>
    <string name="uvi_adv_ok">No protection needed</string>
    <string name="uvi_adv_sunglasses_n_cap">Put on sunglasses and cap</string>
    <string name="uvi_adv_spf_cream">Use SPF cream</string>
    <string name="uvi_adv_beware_of_sun">Beware of sun</string>

</resources>